# npnp

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  README.md  README.zh-CN.md
.github/workflows/: windows-release.yml
src/: app.rs  batch.rs  cli.rs  error.rs  footprint.rs  lib.rs  main.rs  merge.rs  pcblib.rs  pcblib_library_data_template.txt  schlib.rs  schlib_common.rs  schlib_new.rs  util.rs  workflow.rs
src/lceda/: api.rs  mod.rs  models.rs
tests/: export_regression.rs
tests/fixtures/: easyeda_footprint.json  easyeda_symbol.json
