[package]
name = "syft"
version = "0.1.0"
edition = "2024"
authors = ["linkyourbin"]
description = "Pure Rust LCEDA acquisition and bundle exporter"

[lib]
name = "syft"
path = "src/lib.rs"

[[bin]]
name = "syft"
path = "src/main.rs"

[dependencies]
cfb = "0.14.0"
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync"] }
